--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "express": "4.16.2",
+    "firebase": "^7.0.0",
     "hoek": "^6.1.3",
     "jsonwebtoken": "8.1.0",
-    "mongoose": "^5.6.11",
+    "mongodb": "3.3.2",
+    "mongoose": "^5.7.1",
     "nodemon": "^1.19.1",
     "passport": "0.4.0",
-    "passport-jwt": "^4.0.0",
-    "mongodb": "3.3.2"
+    "passport-jwt": "^4.0.0"
   },
   "author": "",
   "license": "ISC"
